update office and contact

--- a/index.html
+++ b/index.html
@@ -345,25 +345,32 @@
          <div class="footer">
             <div class="container">
                <div class="row">
-                  <div class="col-md-4 com-sm-12">
-                     <div class="footer-logo">
-                        <a href="#"><img src="images/ittady-white logo.png" class="img-fluid" alt="ittady-gallery"></a>
-                     </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12">
-                     <div class="quick_links">
-                        <h4>Quick Links</h4>
-                        <ul class="usefull-links">
-                           <li><a href="#">Products</a></li>
-                           <li><a href="#">Top Categories</a></li>
-                           <li><a href="#">Send Message</a></li>
-                           <li><a href="#">Direct Contact</a></li>
-                        </ul>
-                     </div>
-                  </div>
-                  <div class="col-md-4 col-sm-12">
-
-                  </div>
+                    <div class="col-md-4 com-sm-12">
+                        <div class="footer-logo">
+                            <a href="#"><img src="images/ittady-white logo.png" class="img-fluid" alt="ittady-gallery"></a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <div class="quick_links">
+                            <h4>Quick Links</h4>
+                            <ul class="usefull-links">
+                            <li><a href="#">Products</a></li>
+                            <li><a href="#">Top Categories</a></li>
+                            <li><a href="#">Send Message</a></li>
+                            <li><a href="#">Direct Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <div class="office-info">
+                            <h4>Our Office</h4>
+                            <p>
+                            Jalalnagar, Jalalabad Cantonment, <br>
+                            Bateshwar, Sylhet-3104 <br>
+                            +880 1713 800 750, +880 1748 466 534
+                            </p>
+                        </div>
+                    </div>
                      <div class="col-md-6 offset-md-6">
                         <form id="hkh" class="bottom_form">
                            <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
