--- a/index.html
+++ b/index.html
@@ -197,16 +197,16 @@
                <div class="col-md-4 col-sm-12">
                   <div class="product-single">
                      <a href="#">
-                        <img src="images/product-catagories/study.png" class="" alt="Study Table">
-                        <h4>Study Table</h4>
+                        <img src="images/product-catagories/cabinet.png" class="" alt="Cabinet">
+                        <h4>Cabinet</h4>
                      </a>
                   </div>
                </div>
                <div class="col-md-4 col-sm-12">
                   <div class="product-single">
                      <a href="#">
-                        <img src="images/product-catagories/study.png" class="" alt="Study Table">
-                        <h4>Study Table</h4>
+                        <img src="images/product-catagories/dining.png" class="" alt="Chair">
+                        <h4>Chair</h4>
                      </a>
                   </div>
                </div>
