--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
                </div>
                <div class="col-md-6">
                   <div class="map_main">
-                     <div class="map-responsive">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.011226209376!2d91.97211257501644!3d24.93168747788287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37505373215cd9b5%3A0x1941715a9c593640!2sIttady%20Gallery!5e0!3m2!1sen!2sbd!4v1712645409422!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                     <div class="map-responsive img-fluid">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3618.011226209376!2d91.97211257501644!3d24.93168747788287!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x37505373215cd9b5%3A0x1941715a9c593640!2sIttady%20Gallery!5e0!3m2!1sen!2sbd!4v1712645409422!5m2!1sen!2sbd" height="400px" width="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                      </div>
                   </div>
                </div>
